--- a/assets/style.css
+++ b/assets/style.css
@@ -12,8 +12,9 @@ body {
 }
 
 button {
+    
     padding: 10px;
-    margin: 24px;
+    margin-top: 24px;
     cursor: pointer;
     font-size: 24px;
     color: white;
@@ -36,4 +37,12 @@ button {
     color: grey;
     text-align: center;
     font-size: x-large;
+}
+
+.question{
+    display: block;
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+
 }
